css/styles.css
body, html {
    font-family: 'PT Sans', sans-serif;
    font-size: 18px;
    color: #FFF;
    -webkit-font-smoothing: antialiased !important;
    -moz-osx-font-smoothing: grayscale;
    text-shadow: none;
    text-rendering: optimizeLegibility !important;
}

body {
    background-color: #F1C40F;
    color: #FFF;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;
    align-content: stretch;
    -webkit-align-items: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    min-height: 100vh;
}

header {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
    -webkit-flex: 0 0 50px;
    -ms-flex: 0 0 50px;
    flex: 0 0 50px;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    align-self: auto;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;
    align-content: stretch;
    -webkit-align-items: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    padding: 1em;
}

.back {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
}

.back button {
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    background: transparent;
    border: none;
    cursor: pointer;
}

.back button::after {
    content: '';
    display: block;
    position: relative;
    left: 50%;
    top: 50%;
    width: 50px;
    height: 50px;
    margin-left: -25px;
    margin-top: -45px;
    background: #C7A002;
    border-radius: 100%;
    opacity: .6;
    transform: scale(0);
}

@keyframes ripple {
    0% {
        transform: scale(0);
    }
    20% {
        transform: scale(1);
    }
    100% {
        opacity: 0;
        transform: scale(1);
    }
}

.back button:not(:active):after {
    animation: ripple 1s ease-out;
}

.back button svg {
    width: 30px;
    fill: #C7A002;
    transition: fill ease-in .3s;
}

.back button:hover svg {
    fill: #FFF;
}

.logo {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
}

.logo img {
    height: 53px;
}

.right {
    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;
}

div.content {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
    -webkit-flex: 1 0 60vh;
    -ms-flex: 1 0 60vh;
    flex: 1 0 60vh;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
    font-size: 2rem;
    width: 60vw;
    text-align: center;
    padding: 2em 0;
}

footer {
    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;
    -webkit-flex: 0 0 50px;
    -ms-flex: 0 0 50px;
    flex: 0 0 50px;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
    width: 100%;
}

footer .btn {
    font-family: 'PT Sans', sans-serif;
    font-size: 1.3rem;
    font-weight: 700;
    color: #EEE;
    width: 100%;
    text-align: center;
    background: #3498db;
    cursor: pointer;
    padding: 1em 2em;
    border: none;
    -webkit-background-clip: padding-box;
    -moz-background-clip: padding;
    background-clip: padding-box;
    overflow: hidden;
    transition: all .3s cubic-bezier(0.25, 0.1, 0.25, 0.1);
}

footer .btn:hover {
    color: #FFF;
    background: #2980b9;
}

